--- a/Ansible/playbook.yaml
+++ b/Ansible/playbook.yaml
@@ -83,149 +83,149 @@
 #         path: /usr/lib/jvm/java-1.8.0-openjdk-1.8.0.412.b08-1.el7_9.x86_64/jre/bin/java
 #         priority: 1
 
-- name: Install Apache Maven and configure environment
-  hosts: localhost
-  become: yes
-  tasks:
-    - name: Download Maven
-      get_url:
-        url: "https://dlcdn.apache.org/maven/maven-3/3.9.6/binaries/apache-maven-3.9.6-bin.tar.gz"
-        dest: /tmp/apache-maven-3.9.6-bin.tar.gz
+# - name: Install Apache Maven and configure environment
+#   hosts: localhost
+#   become: yes
+#   tasks:
+#     - name: Download Maven
+#       get_url:
+#         url: "https://dlcdn.apache.org/maven/maven-3/3.9.6/binaries/apache-maven-3.9.6-bin.tar.gz"
+#         dest: /tmp/apache-maven-3.9.6-bin.tar.gz
 
-    - name: Extract Maven
-      unarchive:
-        src: /tmp/apache-maven-3.9.6-bin.tar.gz
-        dest: /opt
-        remote_src: yes
-        creates: /opt/apache-maven-3.9.6
+#     - name: Extract Maven
+#       unarchive:
+#         src: /tmp/apache-maven-3.9.6-bin.tar.gz
+#         dest: /opt
+#         remote_src: yes
+#         creates: /opt/apache-maven-3.9.6
 
-    - name: Create maven.sh
-      file:
-        path: /etc/profile.d/maven.sh
-        state: touch
+#     - name: Create maven.sh
+#       file:
+#         path: /etc/profile.d/maven.sh
+#         state: touch
 
-    - name: Create symbolic link
-      file:
-        src: /opt/apache-maven-3.9.6
-        dest: /opt/maven
-        state: link
+#     - name: Create symbolic link
+#       file:
+#         src: /opt/apache-maven-3.9.6
+#         dest: /opt/maven
+#         state: link
 
-    - name: Set environment variables for Maven
-      lineinfile:
-        dest: /etc/profile.d/maven.sh
-        line: |
-          export M2_HOME=/opt/maven
-          export PATH=$PATH:$M2_HOME/bin
+#     - name: Set environment variables for Maven
+#       lineinfile:
+#         dest: /etc/profile.d/maven.sh
+#         line: |
+#           export M2_HOME=/opt/maven
+#           export PATH=$PATH:$M2_HOME/bin
 
-    - name: Configre maven repo to use local repo
-      copy:
-        src: "./maven/settings.xml"
-        dest: /opt/maven/conf/settings.xml
+#     - name: Configre maven repo to use local repo
+#       copy:
+#         src: "./maven/settings.xml"
+#         dest: /opt/maven/conf/settings.xml
 
-    - name: Source maven.sh script
-      shell: source /etc/profile.d/maven.sh
-      args:
-        executable: /bin/bash
+#     - name: Source maven.sh script
+#       shell: source /etc/profile.d/maven.sh
+#       args:
+#         executable: /bin/bash
 
-- name: Install Apache and PHP
-  hosts: localhost
-  become: yes
+# - name: Install Apache and PHP
+#   hosts: localhost
+#   become: yes
 
-  tasks:
-    - name: Install apache(httpd)
-      yum:
-        name: httpd
-        state: present
+#   tasks:
+#     - name: Install apache(httpd)
+#       yum:
+#         name: httpd
+#         state: present
 
-    - name: Install php package
-      yum:
-        name: php
-        state: present
+#     - name: Install php package
+#       yum:
+#         name: php
+#         state: present
 
-- name: Install Docker
-  hosts: localhost
-  become: yes
-  tasks:
-    - name: Add Docker repository
-      yum_repository:
-        name: docker-ce
-        description: Docker CE Stable - $basearch
-        baseurl: https://download.docker.com/linux/centos/7/$basearch/stable
-        gpgcheck: yes
-        gpgkey: https://download.docker.com/linux/centos/gpg
-        enabled: yes
+# - name: Install Docker
+#   hosts: localhost
+#   become: yes
+#   tasks:
+#     - name: Add Docker repository
+#       yum_repository:
+#         name: docker-ce
+#         description: Docker CE Stable - $basearch
+#         baseurl: https://download.docker.com/linux/centos/7/$basearch/stable
+#         gpgcheck: yes
+#         gpgkey: https://download.docker.com/linux/centos/gpg
+#         enabled: yes
 
-    - name: Install Docker
-      yum:
-        name: docker-ce
-        state: present
+#     - name: Install Docker
+#       yum:
+#         name: docker-ce
+#         state: present
 
-    - name: Start Docker service
-      service:
-        name: docker
-        state: started
-        enabled: yes
+#     - name: Start Docker service
+#       service:
+#         name: docker
+#         state: started
+#         enabled: yes
 
-    - name: Change permissions of /var/run/docker.sock
-      file:
-        path: /var/run/docker.sock
-        mode: "0666"
-- name: Install Apache Tomcat 6.0.37
-  hosts: localhost
-  become: yes
-  tasks:
-    - name: Create tomcat directory
-      file:
-        path: /opt/tomcat
-        state: directory
+#     - name: Change permissions of /var/run/docker.sock
+#       file:
+#         path: /var/run/docker.sock
+#         mode: "0666"
+# - name: Install Apache Tomcat 6.0.37
+#   hosts: localhost
+#   become: yes
+#   tasks:
+#     - name: Create tomcat directory
+#       file:
+#         path: /opt/tomcat
+#         state: directory
 
-    - name: Download Apache Tomcat
-      get_url:
-        url: "https://archive.apache.org/dist/tomcat/tomcat-6/v6.0.37/bin/apache-tomcat-6.0.37.tar.gz"
-        dest: /tmp/apache-tomcat-6.0.37.tar.gz
+#     - name: Download Apache Tomcat
+#       get_url:
+#         url: "https://archive.apache.org/dist/tomcat/tomcat-6/v6.0.37/bin/apache-tomcat-6.0.37.tar.gz"
+#         dest: /tmp/apache-tomcat-6.0.37.tar.gz
 
-    - name: Extract Apache Tomcat
-      unarchive:
-        src: /tmp/apache-tomcat-6.0.37.tar.gz
-        dest: /opt/tomcat
-        remote_src: yes
+#     - name: Extract Apache Tomcat
+#       unarchive:
+#         src: /tmp/apache-tomcat-6.0.37.tar.gz
+#         dest: /opt/tomcat
+#         remote_src: yes
 
-    - name: Change permissions of startup.sh
-      file:
-        path: /opt/tomcat/apache-tomcat-6.0.37/bin/startup.sh
-        mode: +x
+#     - name: Change permissions of startup.sh
+#       file:
+#         path: /opt/tomcat/apache-tomcat-6.0.37/bin/startup.sh
+#         mode: +x
 
-    - name: Change Tomcat connector port to 8088
-      replace:
-        path: /opt/tomcat/apache-tomcat-6.0.37/conf/server.xml
-        regexp: 'port="8080"'
-        replace: 'port="8088"'
+#     - name: Change Tomcat connector port to 8088
+#       replace:
+#         path: /opt/tomcat/apache-tomcat-6.0.37/conf/server.xml
+#         regexp: 'port="8080"'
+#         replace: 'port="8088"'
 
-    - name: Change Tomcat port 8005 > 8006
-      replace:
-        path: /opt/tomcat/apache-tomcat-6.0.37/conf/server.xml
-        regexp: 'port="8005"'
-        replace: 'port="8006"'
+#     - name: Change Tomcat port 8005 > 8006
+#       replace:
+#         path: /opt/tomcat/apache-tomcat-6.0.37/conf/server.xml
+#         regexp: 'port="8005"'
+#         replace: 'port="8006"'
 
-    - name: Change Tomcat connector 8009 > 8010
-      replace:
-        path: /opt/tomcat/apache-tomcat-6.0.37/conf/server.xml
-        regexp: 'port="8009"'
-        replace: 'port="8010"'
+#     - name: Change Tomcat connector 8009 > 8010
+#       replace:
+#         path: /opt/tomcat/apache-tomcat-6.0.37/conf/server.xml
+#         regexp: 'port="8009"'
+#         replace: 'port="8010"'
 
-    - name: Create tomcat-users.xml file
-      template:
-        src: "./tomcat/tomcat-users.xml"
-        dest: /opt/tomcat/apache-tomcat-6.0.37/conf/tomcat-users.xml
+#     - name: Create tomcat-users.xml file
+#       template:
+#         src: "./tomcat/tomcat-users.xml"
+#         dest: /opt/tomcat/apache-tomcat-6.0.37/conf/tomcat-users.xml
 
-    - name: Start Tomcat service using startup.sh
-      command: sh /opt/tomcat/apache-tomcat-6.0.37/bin/startup.sh
+#     - name: Start Tomcat service using startup.sh
+#       command: sh /opt/tomcat/apache-tomcat-6.0.37/bin/startup.sh
 
-    - name: Check if Tomcat service is running
-      shell: ps aux | grep '[c]atalina.home=/opt/tomcat'
-      register: tomcat_status
-      ignore_errors: yes
+#     - name: Check if Tomcat service is running
+#       shell: ps aux | grep '[c]atalina.home=/opt/tomcat'
+#       register: tomcat_status
+#       ignore_errors: yes
 
-    - name: Debug message Tomcat status
-      debug:
-        msg: "Tomcat is {{ 'running' if tomcat_status.rc == 0 else 'not running' }}"
+#     - name: Debug message Tomcat status
+#       debug:
+#         msg: "Tomcat is {{ 'running' if tomcat_status.rc == 0 else 'not running' }}"
