--- a/Ansible/playbook.yaml
+++ b/Ansible/playbook.yaml
@@ -12,8 +12,8 @@
   hosts: localhost
   become: yes
   vars:
-    java8_download_url: https://download.oracle.com/otn/java/jdk/8u411-b09/43d62d619be4e416215729597d70b8ac/jdk-8u411-linux-x64.tar.gz?AuthParam=1715328068_927d51645bc3f730bfd56997ac0713bd
-    java11_download_url: https://download.oracle.com/otn/java/jdk/11.0.23+7/9bd8d305c900ee4fa3e613b59e6f42de/jdk-11.0.23_linux-x64_bin.tar.gz?AuthParam=1715328102_06d9bd12fc7dd2c1069284b46d2c06b9
+    java8_download_url: https://download.oracle.com/otn/java/jdk/8u411-b09/43d62d619be4e416215729597d70b8ac/jdk-8u411-linux-x64.tar.gz?AuthParam=1715329607_1d701ac9a940bea9f0e903935ba46eb1
+    java11_download_url: https://download.oracle.com/otn/java/jdk/11.0.23+7/9bd8d305c900ee4fa3e613b59e6f42de/jdk-11.0.23_linux-x64_bin.tar.gz?AuthParam=1715329533_3fff5163de8977dec85581e1a483ca5b
     download_folder: /tmp
     java_8_home: "/usr/local/jdk1.8.0_411"
     java_11_home: "/usr/local//jdk-11.0.23"
@@ -33,11 +33,11 @@
 
     - name: Download Oracle Java 8
       command: "curl -v -L -b oraclelicense=accept-securebackup-cookie -o {{java_8_archive}}  {{java8_download_url}}"
-      when: java_8_archive_stat.stat.exists == False
+      #when: java_8_archive_stat.stat.exists == False
 
     - name: Download Oracle Java 11
       command: "curl -v -L -b oraclelicense=accept-securebackup-cookie -o {{java_11_archive}}  {{java11_download_url}}"
-      when: java_11_archive_stat.stat.exists == False
+      #when: java_11_archive_stat.stat.exists == False
 
     - name: Unpack archive Oracle Java 8
       unarchive:
