--- a/Ansible/playbook.yaml
+++ b/Ansible/playbook.yaml
@@ -60,6 +60,12 @@
 
     - name: Exports/Run java env file for make JAVA_HOME available globally
       shell: "source {{java_env_file}}"
+
+    - name: Create /etc/profile.d directory
+      file:
+        path: /etc/profile.d
+        state: directory
+
     - name: Set environment variables for JAVA
       lineinfile:
         dest: "{{ java_env_file }}"
