--- a/Ansible/playbook.yaml
+++ b/Ansible/playbook.yaml
@@ -71,6 +71,9 @@
     - name: Clear content of java.sh file if it exists
       shell: echo "" > "{{ java_env_file }}"
 
+    - name: Exports/Run java env file for make JAVA_HOME available globally
+      shell: "source {{java_env_file}}"
+
     - name: Set environment variables for JAVA
       lineinfile:
         dest: "{{ java_env_file }}"
@@ -78,8 +81,10 @@
           export JAVA_HOME={{java_8_home}}
           export PATH=$PATH:$JAVA_HOME/bin
 
-    - name: Exports/Run java env file for make JAVA_HOME available globally
-      shell: "source {{java_env_file}}"
+    - name: Source java.sh script
+      shell: source {{java_env_file}}
+      args:
+        executable: /bin/bash
 # - name: Install multiple versions of Java and set default
 #   hosts: localhost
 #   become: yes
