--- a/Ansible/playbook.yaml
+++ b/Ansible/playbook.yaml
@@ -82,71 +82,71 @@
 #       args:
 #         executable: /bin/bash
 
-- name: Install Apache Tomcat 6.0.37
-  hosts: localhost
-  become: yes
-  vars:
-    download_url: https://archive.apache.org/dist/tomcat/tomcat-6/v6.0.37/bin/apache-tomcat-6.0.37.tar.gz
-    download_folder: /tmp
-    tomcat_installation_path: "/opt/tomcat"
-    tomcat_home: "/opt/tomcat/apache-tomcat-6.0.37"
-    tomcat_archive: "{{download_folder}}/apache-tomcat-6.0.37.tar.gz"
-  tasks:
-    - name: Create tomcat directory
-      file:
-        path: "{{tomcat_installation_path}}"
-        state: directory
+# - name: Install Apache Tomcat 6.0.37
+#   hosts: localhost
+#   become: yes
+#   vars:
+#     download_url: https://archive.apache.org/dist/tomcat/tomcat-6/v6.0.37/bin/apache-tomcat-6.0.37.tar.gz
+#     download_folder: /tmp
+#     tomcat_installation_path: "/opt/tomcat"
+#     tomcat_home: "/opt/tomcat/apache-tomcat-6.0.37"
+#     tomcat_archive: "{{download_folder}}/apache-tomcat-6.0.37.tar.gz"
+#   tasks:
+#     - name: Create tomcat directory
+#       file:
+#         path: "{{tomcat_installation_path}}"
+#         state: directory
 
-    - name: Download Apache Tomcat
-      get_url:
-        url: "{{download_url}}"
-        dest: "{{tomcat_archive}}"
+#     - name: Download Apache Tomcat
+#       get_url:
+#         url: "{{download_url}}"
+#         dest: "{{tomcat_archive}}"
 
-    - name: Extract Apache Tomcat
-      unarchive:
-        src: "{{tomcat_archive}}"
-        dest: "{{tomcat_installation_path}}"
-        remote_src: yes
+#     - name: Extract Apache Tomcat
+#       unarchive:
+#         src: "{{tomcat_archive}}"
+#         dest: "{{tomcat_installation_path}}"
+#         remote_src: yes
 
-    - name: Change permissions of startup.sh
-      file:
-        path: "{{tomcat_home}}/bin/startup.sh"
-        mode: +x
+#     - name: Change permissions of startup.sh
+#       file:
+#         path: "{{tomcat_home}}/bin/startup.sh"
+#         mode: +x
 
-    - name: Change Tomcat connector port to 8088
-      replace:
-        path: "{{tomcat_home}}/conf/server.xml"
-        regexp: 'port="8080"'
-        replace: 'port="8088"'
+#     - name: Change Tomcat connector port to 8088
+#       replace:
+#         path: "{{tomcat_home}}/conf/server.xml"
+#         regexp: 'port="8080"'
+#         replace: 'port="8088"'
 
-    - name: Change Tomcat port 8005 > 8006
-      replace:
-        path: "{{tomcat_home}}/conf/server.xml"
-        regexp: 'port="8005"'
-        replace: 'port="8006"'
+#     - name: Change Tomcat port 8005 > 8006
+#       replace:
+#         path: "{{tomcat_home}}/conf/server.xml"
+#         regexp: 'port="8005"'
+#         replace: 'port="8006"'
 
-    - name: Change Tomcat connector 8009 > 8010
-      replace:
-        path: "{{tomcat_home}}/conf/server.xml"
-        regexp: 'port="8009"'
-        replace: 'port="8010"'
+#     - name: Change Tomcat connector 8009 > 8010
+#       replace:
+#         path: "{{tomcat_home}}/conf/server.xml"
+#         regexp: 'port="8009"'
+#         replace: 'port="8010"'
 
-    - name: Create tomcat-users.xml file
-      template:
-        src: "./tomcat/tomcat-users.xml"
-        dest: "{{tomcat_home}}/conf/tomcat-users.xml"
+#     - name: Create tomcat-users.xml file
+#       template:
+#         src: "./tomcat/tomcat-users.xml"
+#         dest: "{{tomcat_home}}/conf/tomcat-users.xml"
 
-    - name: Start Tomcat service using startup.sh
-      command: sh "{{tomcat_home}}/bin/startup.sh"
+#     - name: Start Tomcat service using startup.sh
+#       command: sh "{{tomcat_home}}/bin/startup.sh"
 
-    - name: Check if Tomcat service is running
-      shell: ps aux | grep '[c]atalina.home=/opt/tomcat'
-      register: tomcat_status
-      ignore_errors: yes
+#     - name: Check if Tomcat service is running
+#       shell: ps aux | grep '[c]atalina.home=/opt/tomcat'
+#       register: tomcat_status
+#       ignore_errors: yes
 
-    - name: Debug message Tomcat status
-      debug:
-        msg: "Tomcat is {{ 'running' if tomcat_status.rc == 0 else 'not running' }}"
+#     - name: Debug message Tomcat status
+#       debug:
+#         msg: "Tomcat is {{ 'running' if tomcat_status.rc == 0 else 'not running' }}"
 # - name: Install Apache Maven and configure environment
 #   hosts: localhost
 #   become: yes
