--- a/Ansible/playbook.yaml
+++ b/Ansible/playbook.yaml
@@ -70,13 +70,13 @@
 #     - name: Clear content of java.sh file if it exists
 #       shell: echo "" > "{{ java_env_file }}"
 
-#     - name: Set environment variables for JAVA
-#       lineinfile:
-#         dest: "{{ java_env_file }}"
-#         line: |
-#           export JAVA_HOME={{java_8_home}}
-#           export PATH=$PATH:$JAVA_HOME/bin
-
+# - name: Set environment variables for JAVA
+#   lineinfile:
+#     dest: "{{ java_env_file }}"
+#     line: "{{item }}"
+#   with_items:
+#     - "export JAVA_HOME={{java_8_home}}"
+#     - "export PATH=$PATH:$JAVA_HOME/bin"
 #     - name: Source java.sh script
 #       shell: source {{java_env_file}}
 #       args:
@@ -148,60 +148,123 @@
 #       debug:
 #         msg: "Tomcat is {{ 'running' if tomcat_status.rc == 0 else 'not running' }}"
 
-- name: Install Apache Maven and configure environment
+# - name: Install Apache Maven and configure environment
+#   hosts: localhost
+#   become: yes
+#   vars:
+#     download_url: https://dlcdn.apache.org/maven/maven-3/3.9.6/binaries/apache-maven-3.9.6-bin.tar.gz
+#     download_folder: /tmp
+#     maven_installation_path: "/opt/maven"
+#     maven_home: "/opt/maven/apache-maven-3.9.6"
+#     maven_archive: "{{download_folder}}/apache-maven-3.9.6-bin.tar.gz"
+#     maven_env_file: "/etc/profile.d/maven.sh"
+
+#   tasks:
+#     - name: Download Maven
+#       get_url:
+#         url: "{{ download_url }}"
+#         dest: "{{ maven_archive }}"
+
+#     - name: Create maven.sh
+#       file:
+#         path: "{{ maven_installation_path }}"
+#         state: directory
+
+#     - name: Extract Maven
+#       unarchive:
+#         src: "{{ maven_archive }}"
+#         dest: "{{ maven_installation_path }}"
+#         creates: "{{ maven_home }}"
+#         remote_src: yes
+
+#     - name: Create maven.sh
+#       file:
+#         path: "{{ maven_env_file }}"
+#         state: touch
+
+#     - name: Clear content of maven.sh file if it exists
+#       shell: echo "" > "{{ maven_env_file }}"
+
+#     - name: Set environment variables for Maven
+#       lineinfile:
+#         dest: "{{ maven_env_file }}"
+#         line: "{{ item }}"
+#       with_items:
+#         - "export M2_HOME={{maven_home}}"
+#         - "export PATH=$PATH:$M2_HOME/bin"
+
+#     - name: Configure maven repo to use local repo
+#       copy:
+#         src: "./maven/settings.xml"
+#         dest: "{{ maven_home }}/conf/settings.xml"
+
+#     - name: Source maven.sh script
+#       shell: source {{ maven_env_file }}
+#       args:
+#         executable: /bin/bash
+
+- name: Install WebLogic Server (12.21.3.0)
   hosts: localhost
   become: yes
   vars:
-    download_url: https://dlcdn.apache.org/maven/maven-3/3.9.6/binaries/apache-maven-3.9.6-bin.tar.gz
+    java8_download_url: https://download.oracle.com/otn/java/jdk/8u411-b09/43d62d619be4e416215729597d70b8ac/jdk-8u411-linux-x64.tar.gz?AuthParam=1715329607_1d701ac9a940bea9f0e903935ba46eb1
+    java11_download_url: https://download.oracle.com/otn/java/jdk/11.0.23+7/9bd8d305c900ee4fa3e613b59e6f42de/jdk-11.0.23_linux-x64_bin.tar.gz?AuthParam=1715329784_6c64b1935760ee8cd8f61cc325d75b82
     download_folder: /tmp
-    maven_installation_path: "/opt/maven"
-    maven_home: "/opt/maven/apache-maven-3.9.6"
-    maven_archive: "{{download_folder}}/apache-maven-3.9.6-bin.tar.gz"
-    maven_env_file: "/etc/profile.d/maven.sh"
-
+    java_8_home: "/usr/local/jdk1.8.0_411"
+    java_11_home: "/usr/local/jdk-11.0.23"
+    java_8_archive: "{{download_folder}}/jdk-8u411-linux-x64.tar.gz"
+    java_11_archive: "{{download_folder}}/jdk-11.0.23_linux-x64_bin.tar.gz"
+    java_env_file: "/etc/profile.d/java.sh"
   tasks:
-    - name: Download Maven
-      get_url:
-        url: "{{ download_url }}"
-        dest: "{{ maven_archive }}"
+    - name: Check if Oracle Java 8 archive exists
+      stat:
+        path: "{{ java_8_archive }}"
+      register: java_8_archive_stat
 
-    - name: Create maven.sh
-      file:
-        path: "{{ maven_installation_path }}"
-        state: directory
+    - name: Check if Oracle Java 11 archive exists
+      stat:
+        path: "{{ java_11_archive }}"
+      register: java_11_archive_stat
 
-    - name: Extract Maven
+    - name: Download Oracle Java 8
+      command: "curl -v -L -b oraclelicense=accept-securebackup-cookie -o {{java_8_archive}}  {{java8_download_url}}"
+      when: java_8_archive_stat.stat.exists == False
+
+    - name: Download Oracle Java 11
+      command: "curl -v -L -b oraclelicense=accept-securebackup-cookie -o {{java_11_archive}}  {{java11_download_url}}"
+      when: java_11_archive_stat.stat.exists == False
+
+    - name: Unpack archive Oracle Java 8
       unarchive:
-        src: "{{ maven_archive }}"
-        dest: "{{ maven_installation_path }}"
-        creates: "{{ maven_home }}"
+        src: "{{java_8_archive}}"
+        dest: /usr/local
         remote_src: yes
 
-    - name: Create maven.sh
+    - name: Unpack archive Oracle Java 11
+      unarchive:
+        src: "{{java_11_archive}}"
+        dest: /usr/local
+        remote_src: yes
+
+    - name: Install Oracle Java 8
+      command: 'update-alternatives --install "/usr/bin/java" "java" "{{java_8_home}}/jre/bin/java" 1'
+    - name: Install Oracle Java 11
+      command: 'update-alternatives --install "/usr/bin/java" "java" "{{java_11_home}}/jre/bin/java" 1'
+    - name: Set Oracle Java 8 as default
+      command: "update-alternatives --set java {{java_8_home}}/jre/bin/java"
+
+    - name: Create /etc/profile.d directory
       file:
-        path: "{{ maven_env_file }}"
+        path: /etc/profile.d
+        state: directory
+
+    - name: Create java.sh file
+      file:
+        path: "{{java_env_file}}"
         state: touch
 
-    - name: Clear content of maven.sh file if it exists
-      shell: echo "" > "{{ maven_env_file }}"
-
-    - name: Set environment variables for Maven
-      lineinfile:
-        dest: "{{ maven_env_file }}"
-        line: "{{ item }}"
-      with_items:
-        - "export M2_HOME={{maven_home}}"
-        - "export PATH=$PATH:$M2_HOME/bin"
-
-    - name: Configure maven repo to use local repo
-      copy:
-        src: "./maven/settings.xml"
-        dest: "{{ maven_home }}/conf/settings.xml"
-
-    - name: Source maven.sh script
-      shell: source {{ maven_env_file }}
-      args:
-        executable: /bin/bash
+    - name: Clear content of java.sh file if it exists
+      shell: echo "" > "{{ java_env_file }}"
 # - name: Install Apache and PHP
 #   hosts: localhost
 #   become: yes
