--- a/Ansible/playbook.yaml
+++ b/Ansible/playbook.yaml
@@ -270,3 +270,12 @@
           - /var/run/docker.sock:/var/run/docker.sock
           - "{{ ansible_playbook_dir }}/docker:/usr/bin/docker"
         network_mode: host
+    - name: Get initial admin password
+      docker_exec:
+        container: jenkins
+        command: cat /var/jenkins_home/secrets/initialAdminPassword
+      register: initial_admin_password
+
+    - name: Print the secret
+      debug:
+        msg: "The initial admin password is {{ initial_admin_password.stdout }}"
