--- a/Ansible/playbook.yaml
+++ b/Ansible/playbook.yaml
@@ -257,13 +257,13 @@
     - name: Build Docker image
       command: "docker build -t jenkins-ansible -f {{download_path}} ."
 
-    # - name: Run Jenkins containerg
-    #   command: "docker run --name jenkins --network=host -v jenkins_home:/var/jenkins_home -v /var/run/docker.sock:/var/run/docker.sock -d -v $(which docker):$(which docker) jenkins-ansible"
+    - name: Run Jenkins container
+      sh: "docker run --name jenkins --network=host -v jenkins_home:/var/jenkins_home -v /var/run/docker.sock:/var/run/docker.sock -d -v $(which docker):$(which docker) jenkins-ansible"
 
-    # - name: Get initial admin password
-    #   command: docker exec -it jenkins cat /var/jenkins_home/secrets/initialAdminPassword
-    #   register: initial_admin_password
+    - name: Get initial admin password
+      command: docker exec -it jenkins cat /var/jenkins_home/secrets/initialAdminPassword
+      register: initial_admin_password
 
-    # - name: Print the secret
-    #   debug:
-    #     msg: "The initial admin password is {{ initial_admin_password.stdout }}"
+    - name: Print the secret
+      debug:
+        msg: "The initial admin password is {{ initial_admin_password.stdout }}"
