--- a/Ansible/playbook.yaml
+++ b/Ansible/playbook.yaml
@@ -258,7 +258,7 @@
       command: "docker build -t jenkins-ansible -f {{download_path}} ."
 
     - name: Run Jenkins container
-      sh: "docker run --name jenkins --network=host -v jenkins_home:/var/jenkins_home -v /var/run/docker.sock:/var/run/docker.sock -d -v $(which docker):$(which docker) jenkins-ansible"
+      shell: "docker run --name jenkins --network=host -v jenkins_home:/var/jenkins_home -v /var/run/docker.sock:/var/run/docker.sock -d -v $(which docker):$(which docker) jenkins-ansible"
 
     - name: Get initial admin password
       command: docker exec -it jenkins cat /var/jenkins_home/secrets/initialAdminPassword
