--- a/Ansible/playbook.yaml
+++ b/Ansible/playbook.yaml
@@ -276,7 +276,7 @@
         - "<Location /svn>"
         - "DAV svn"
         - "SVNParentPath /svn"
-        - "AuthName "SVN Repos"
+        - 'AuthName "SVN Repos"'
         - "AuthType Basic"
         - "AuthUserFile /etc/svn/svn-auth"
         - "AuthzSVNAccessFile /svn/authz"
@@ -297,28 +297,27 @@
         owner: apache
         group: apache
         recurse: yes
- 
+
     - name: Create user001
       shell: |
-          echo "{{ your_password }}" | sudo htpasswd -cm /etc/svn/svn-auth user001
+        echo "{{ your_password }}" | sudo htpasswd -cm /etc/svn/svn-auth user001
       vars:
         user_password: "123"
       ignore_errors: true
 
     - name: Create user002
       shell: |
-          echo "{{ your_password }}" | sudo htpasswd -cm /etc/svn/svn-auth user002
+        echo "{{ your_password }}" | sudo htpasswd -cm /etc/svn/svn-auth user002
       vars:
         user_password: "123"
       ignore_errors: true
 
     - name: Create user003
       shell: |
-          echo "{{ your_password }}" | sudo htpasswd -cm /etc/svn/svn-auth user003
+        echo "{{ your_password }}" | sudo htpasswd -cm /etc/svn/svn-auth user003
       vars:
         user_password: "123"
       ignore_errors: true
-        
 
     - name: Create SVN User Accounts Directory
       file:
@@ -345,7 +344,6 @@
         name: httpd
         state: started
         enabled: yes
-
 # - name: Run Jenkins with ansible support as a Docker image
 #   hosts: localhost
 #   become: yes
