--- a/Ansible/playbook.yaml
+++ b/Ansible/playbook.yaml
@@ -298,27 +298,6 @@
         group: apache
         recurse: yes
 
-    - name: Create user001
-      shell: |
-        echo "{{ user_password }}" | sudo htpasswd -cm /etc/svn/svn-auth user001
-      vars:
-        user_password: "123"
-      ignore_errors: true
-
-    - name: Create user002
-      shell: |
-        echo "{{ user_password }}" | sudo htpasswd -cm /etc/svn/svn-auth user002
-      vars:
-        user_password: "123"
-      ignore_errors: true
-
-    - name: Create user003
-      shell: |
-        echo "{{ user_password }}" | sudo htpasswd -cm /etc/svn/svn-auth user003
-      vars:
-        user_password: "123"
-      ignore_errors: true
-
     - name: Create SVN User Accounts Directory
       file:
         path: "{{svn_accounts_home}}"
@@ -334,7 +313,7 @@
     - name: Setup permissions for users
       copy:
         src: "{{svn_repos_home}}/isfp/conf/authz"
-        dest: "{{ svn_repos_home }}/authz/"
+        dest: "{{ svn_repos_home }}/authz"
 
     - name: Change SELinux context of /svn/authz
       command: chcon -R -t httpd_sys_content_t /svn/authz
