--- a/Ansible/playbook.yaml
+++ b/Ansible/playbook.yaml
@@ -273,8 +273,8 @@
         - "LoadModule dav_svn_module     modules/mod_dav_svn.so"
         - "LoadModule authz_svn_module   modules/mod_authz_svn.so"
         - "LoadModule dontdothat_module  modules/mod_dontdothat.so"
-        - ""
-        - ""
+        - " "
+        - " "
         - "<Location /svn>"
         - "DAV svn"
         - "SVNParentPath /svn"
@@ -320,11 +320,14 @@
 
     - name: Setup permissions for users
       copy:
-        src: "{{svn_repos_home}}/isfp/conf/authz"
+        src: "./svn/authz"
         dest: "{{ svn_repos_home }}/authz"
 
-    - name: Change SELinux context of /svn/authz
-      command: chcon -R -t httpd_sys_content_t /svn/authz
+    - name: "Change SELinux context of {{svn_repos_home}}/authz"
+      command: "chcon -R -t httpd_sys_content_t {{svn_repos_home}}/authz"
+
+    - name: "Change SELinux context of {{svn_repos_home}}"
+      command: "chcon -R -t httpd_sys_rw_content_t {{svn_repos_home}}"
 
     - name: Start and enable httpd service
       systemd:
